--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -10,7 +10,7 @@ COPY package.json /usr/src/app/
 RUN npm install --production
 ENV NODE_ENV=production
 COPY . /usr/src/app
-RUN chmod +x docker-entrypoint.sh
+# RUN chmod +x docker-entrypoint.sh
 EXPOSE 7007
 # ENTRYPOINT ["/bin/sh -c npm start"]
 CMD [ "npm", "start" ]
