--- a/.gitignore
+++ b/.gitignore
@@ -10,11 +10,11 @@ yarn.lock
 /coverage
 
 # production
-# production
 /server/build
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
