--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "deploy-rpi": "env-cmd -f .env.production.local cross-env GENERATE_SOURCEMAP=false && (cd server && docker build . --platform linux/arm64/v8 -t friendlyngeeks/react-spotify:rpi64-latest -f Dockerfile)",
     "deploy-win": "env-cmd -f .env.production.local cross-env GENERATE_SOURCEMAP=false && (cd server && docker build . --platform windows/amd64 -t friendlyngeeks/react-spotify:win64-latest)",
     "build-prod": "env-cmd -f .env.production.local cross-env GENERATE_SOURCEMAP=false craco build && (cd server && yarn start)",
-    "build-dev": "env-cmd -f .env.development.local cross-env GENERATE_SOURCEMAP=false craco build && (cd server && yarn dev)",
+    "build-dev": "env-cmd -f .env.development.local cross-env GENERATE_SOURCEMAP=false craco build && (cd server && node server.js)",
     "build-docs": "find ./src/app/main/documentation/material-ui-components \\( -name '*.ts' -o -name '*.tsx' \\) -type f -delete && babel-node --presets @babel/preset-env src/app/main/documentation/material-ui-components/build.js",
     "build-exe": "env-cmd -f .env.development.local cross-env GENERATE_SOURCEMAP=false && node ./nexe.config.js",
     "analyze": "craco build && source-map-explorer 'build/static/js/*.js' --html analyze-result.html",
