--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,7 +1,7 @@
 #Dockerfile
 #node:14.15.1-alpine
 FROM arm64v8/node:19.1.0-alpine
-LABEL version="0.0.1"
+LABEL version="0.0.7"
 LABEL description="React Spotify API server for Now Playing"
 LABEL maintainer="friendlyneighborhoodgeeks@gmail.com"
 # ENV DEBUG=*
@@ -9,8 +9,12 @@ RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
 COPY package.json /usr/src/app/
 RUN npm install --production
+# If you are building your code for production
+# RUN npm ci --omit=dev
 RUN apk add nano
 ENV NODE_ENV=production
-COPY . /usr/src/app
+# Bundle app source
+COPY . .
 EXPOSE 7007
-CMD [ "npm", "start" ]
+# CMD [ "npm", "start" ]
+ENTRYPOINT node server.js
