--- a/server/package.json
+++ b/server/package.json
@@ -1,23 +1,22 @@
 {
   "name": "server",
-  "version": "1.0.0",
+  "version": "0.0.7",
   "description": "server for Spotify token and react component",
   "main": "server.js",
-  "repository": "github.com",
+  "repository": "https://github.com/FriendlyNGeeks/react-spotify_api/blob/master/server/Dockerfile",
   "author": "FriendlyNGeeks",
   "license": "MIT",
   "private": false,
   "scripts": {
     "dev": "nodemon -r dotenv-flow/config server.js --node-env=development --dotenv-flow-path=../",
     "prod": "nodemon -r dotenv-flow/config server.js --node-env=production --dotenv-flow-path=../",
-    "start": "nodemon server.js",
+    "start": "node server.js",
     "test": "echo \"Only a test\" && exit 1"
   },
   "dependencies": {
     "axios": "^1.4.0",
     "dotenv-flow": "^3.2.0",
     "express": "^4.18.2",
-    "nodemon": "^2.0.22",
     "request": "^2.88.2",
     "socket.io": "^4.6.1"
   }
